--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"gungi.js-fork": "^1.0.21",
+		"nanoid": "^3.0.0",
 		"socket.io": "^3.1.2",
 		"uuid": "^8.3.2"
 	},
