--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^12.6.0",
 		"mobx": "5.9.0",
 		"mobx-react-lite": "1.0.1",
+		"nanoid": "^3.3.4",
 		"polished": "^4.0.5",
 		"react": "^17.0.2",
 		"react-device-detect": "^1.17.0",
